...
    <string name="username_invalid">
        Usernames must only contain lowercase letters and numbers
    </string>
    <string name="username_taken">
        Username taken!
    </string>
    <string name="no_bank_deposit">
        Enter an amount of coins to send
    </string>
    <string name="negative_zero_depoist">
        Enter a positive amount of coins
    </string>
    <string name="not_enough_coins">
        You do not have that many coins to deposit, check your wallet
    </string>
    <string name="too_many_coins_today">
        You have already submitted 25 coins!
    </string>
    <string name="depoist_overlimit">
...
